fix sessionInput button show/hide visibility

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -314,6 +314,11 @@ $session_message-container-border-radius: 5px;
     margin-top: 13.5px;
   }
 }
+
+.hidden {
+  visibility: hidden;
+}
+
 .input-with-label-container {
   height: 46.5px;
   width: 280px;
